vbnc/vbnc/tests/Errors/30311-47.vb
Class Date1
    Public Shared Function Main() As Integer
        Dim a As Decimal = TimeSpan.FromSeconds(1)
    End Function
End Class